# hhnk-research-tools

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pixi.toml  pyproject.toml
.github/workflows/: publish_on_release.yml  pytests_research_tools.yml
docs/: README - Module WaterSchadeSchatterCurves.md
envs/: environment.yml  environment_test.yml
hhnk_research_tools/: __init__.py  __init__.pyi  dataframe_functions.py  general_functions.py  installation_checks.py  logger.py  logging.py  processes.py  raster_functions.py  sql_functions.py  variables.py
hhnk_research_tools/folder_file_classes/: __init__.py  __init__.pyi  file_class.py  folder_file_classes.py  spatial_database_class.py  sqlite_class.py  threedi_schematisation.py
hhnk_research_tools/gis/: __init__.py  __init__.pyi  interactive_map.py  raster.py  raster_calculator.py
hhnk_research_tools/rasters/: __init__.py  __init__.pyi  raster_calculator_rxr.py  raster_class.py  raster_metadata.py
hhnk_research_tools/threedi/: __init__.py  __init__.pyi  call_api.py  geometry_functions.py  grid.py  read_api_file.py  threediresult_loader.py
hhnk_research_tools/waterschadeschatter/: __init__.py  __init__.pyi  test.py  wss_curves_areas.py  wss_curves_areas_post.py  wss_curves_areas_pre.py  wss_curves_figures.py  wss_curves_folium  wss_curves_folium.py  wss_curves_lookup.py  wss_curves_utils.py  (+3 more)
tests_hrt/: config.py  ftest_sql_functions.py  test_file_folder.py  test_interactive_map.py  test_logger.py  test_raster_calculator.py  test_spatial_database_class.py  test_sql_functions.py  test_wss_curves.py
(+38 files in other folders)
